codepkg/objects/Request_For_Information__c.object
<CustomObject>
    <fields>
        <fullName>Analyst_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Analyst Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Request For Informations</relationshipLabel>
        <relationshipName>Request_For_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CWMP_Applicant_Email__c</fullName>
        <description>CWMP Application - Applicant Email.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>CWMP Application - Applicant Email.</inlineHelpText>
        <label>CWMP Applicant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CWMP_Applicant_First_Name__c</fullName>
        <description>CWMP Application - Applicant First name</description>
        <formula>CWMP_Application__r.Applicant_First_Name__c</formula>
        <inlineHelpText>CWMP Application - Applicant First name</inlineHelpText>
        <label>CWMP Applicant First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CWMP_Applicant_Last_Name__c</fullName>
        <description>CWMP Application - Applicant Last Name</description>
        <formula>CWMP_Application__r.Applicant_Last_Name__c</formula>
        <inlineHelpText>CWMP Application - Applicant Last Name</inlineHelpText>
        <label>CWMP Applicant Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CWMP_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CWMP Application</label>
        <referenceTo>HH_Application__c</referenceTo>
        <relationshipLabel>Request For Information</relationshipLabel>
        <relationshipName>Request_For_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cal_OES_Comment__c</fullName>
        <description>Comment for RFI by Cal OES User.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cal OES Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Community_App_URL__c</fullName>
        <description>URL of the Community for the CWMP App.</description>
        <formula>$Label.HH_Community_BaseURL+&apos;request-for-information/&apos;</formula>
        <inlineHelpText>URL of the Community for the CWMP App.</inlineHelpText>
        <label>Community App URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Comment__c</fullName>
        <description>Comment for RFI by Community.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Community Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FEMA_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FEMA Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Homeowner_Comment__c</fullName>
        <description>Comment for RFI by Homeowner User.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Homeowner Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RFI_Deadline__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RFI Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFI_Type__c</fullName>
        <label>RFI Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OES BCA</fullName>
                </value>
                <value>
                    <fullName>OES Programmatic</fullName>
                </value>
                <value>
                    <fullName>FEMA Programmatic</fullName>
                </value>
                <value>
                    <fullName>FEMA EHP</fullName>
                </value>
                <value>
                    <fullName>FEMA OES Programmatic</fullName>
                </value>
                <value>
                    <fullName>FEMA OES EHP</fullName>
                </value>
                <value>
                    <fullName>CWMP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>RFI_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Sent to Subapplicant</fullName>
                </value>
                <value>
                    <fullName>Time Extension Requested</fullName>
                </value>
                <value>
                    <fullName>Time Extension Accepted</fullName>
                </value>
                <value>
                    <fullName>Time Extension Rejected</fullName>
                </value>
                <value>
                    <fullName>Response Submitted</fullName>
                </value>
                <value>
                    <fullName>Response Accepted</fullName>
                </value>
                <value>
                    <fullName>Response Rejected</fullName>
                </value>
                <value>
                    <fullName>FEMA Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted to Cal OES Analyst</fullName>
                </value>
                <value>
                    <fullName>FEMA RFI Accepted</fullName>
                </value>
                <value>
                    <fullName>FEMA RFI Rejected</fullName>
                </value>
                <value>
                    <fullName>OES Analyst Review FEMA EHP RFI</fullName>
                </value>
                <value>
                    <fullName>OES Analyst Review FEMA Programmatic RFI</fullName>
                </value>
                <value>
                    <fullName>FEMA Time Extension Requested</fullName>
                </value>
                <value>
                    <fullName>FEMA Time Extension Accepted</fullName>
                </value>
                <value>
                    <fullName>FEMA Time Extension Rejected</fullName>
                </value>
                <value>
                    <fullName>Response Submitted by Cal OES Analyst</fullName>
                </value>
                <value>
                    <fullName>FEMA EHP RFI Accepted</fullName>
                </value>
                <value>
                    <fullName>FEMA EHP RFI Rejected</fullName>
                </value>
                <value>
                    <fullName>FEMA Programmatic RFI Accepted</fullName>
                </value>
                <value>
                    <fullName>FEMA Programmatic RFI Rejected</fullName>
                </value>
                <value>
                    <fullName>RFI Requested</fullName>
                </value>
                <value>
                    <fullName>Response Received</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Withdrawal</fullName>
                </value>
                <value>
                    <fullName>Submitted to HMA Analyst</fullName>
                    <isActive>false</isActive>
                    <label>Submitted to HMA Analyst</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subapplicant_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subapplicant Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subapplicant_Status__c</fullName>
        <formula>IF( ISPICKVAL(Status__c, &apos;Sent to Subapplicant&apos;), 
			&apos;Open&apos;, IF( ISPICKVAL(Status__c, &apos;Response Submitted&apos;), 
														&apos;Response Submitted&apos;, IF(ISPICKVAL(Status__c, &apos;Time Extension Requested&apos;), 
																																		&apos;Time Extension Requested&apos;, IF(ISPICKVAL(Status__c, &apos;Response Accepted&apos;),
																																																																	&apos;Response Submitted&apos;, IF(ISPICKVAL(Status__c, &apos;Response Rejected&apos;), 
																																																																																									&apos;Response Submitted&apos;, &apos;&apos;)))))</formula>
        <label>Subapplicant Status</label>
        <type>Text</type>
    </fields>
    <label>Request For Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RFI-{00000}</displayFormat>
        <label>Request For Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request For Information</pluralLabel>
    <recordTypes>
        <fullName>CWMP</fullName>
        <active>true</active>
        <description>Record Type for CWMP RFI</description>
        <label>CWMP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>HMA</fullName>
        <active>true</active>
        <label>HMA</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>CWMP_Sharing__c</fullName>
        <label>CWMP Sharing</label>
    </sharingReasons>
    <validationRules>
        <fullName>CWMP_RFI_Prior_Date_Restriction</fullName>
        <active>true</active>
        <description>Restricting CWMP Application RFI from Entering Prior Date in RFI Deadline.</description>
        <errorConditionFormula>AND( RecordType.DeveloperName = &apos;CWMP&apos;,  RFI_Deadline__c &lt; TODAY() )</errorConditionFormula>
        <errorMessage>RFI Deadline must not be prior to today&apos;s date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Change_RFI_Type_only_in_draft_stage</fullName>
        <active>true</active>
        <description>RFI type can only be changed if status is draft</description>
        <errorConditionFormula>OR( $UserRole.Name = &apos;HMA Analyst&apos;, $UserRole.Name = &apos;HMA Manager&apos;)  &amp;&amp;
NOT(ISPICKVAL(Status__c, &apos;Draft&apos;)) &amp;&amp;  ISCHANGED(RFI_Type__c)</errorConditionFormula>
        <errorDisplayField>RFI_Type__c</errorDisplayField>
        <errorMessage>You cannot change RFI Type after the RFI is sent to subapplicant.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FEMA_User_create_FEMA_RFI_Type</fullName>
        <active>false</active>
        <description>Only Fema user should be able to create FEMA related RFI type</description>
        <errorConditionFormula>($UserRole.Name = &quot;HMA Analyst&quot; || $UserRole.Name = &quot;HMA Manager&quot;) &amp;&amp;  (ISPICKVAL( RFI_Type__c , &apos;FEMA OES Programmatic&apos;) ||  ISPICKVAL(RFI_Type__c, &apos;FEMA OES EHP&apos;))</errorConditionFormula>
        <errorDisplayField>RFI_Type__c</errorDisplayField>
        <errorMessage>You are not allowed to create FEMA OES EHP,  FEMA OES Programmatic RFI Types</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Subapplicant_Comment_Change</fullName>
        <active>true</active>
        <description>Analyst and Manger cannot change the subapplicant comments.</description>
        <errorConditionFormula>OR( $UserRole.Name = &apos;HMA Analyst&apos;, $UserRole.Name = &apos;HMA Manager&apos;) &amp;&amp;
ISCHANGED( Subapplicant_Comment__c )</errorConditionFormula>
        <errorDisplayField>Subapplicant_Comment__c</errorDisplayField>
        <errorMessage>You do not have access to change Subapplicant comments.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Time_Ext_Rej_or_Accp_If_Not_Req</fullName>
        <active>true</active>
        <description>Restrict Time extension Accepted and Rejected if Prior status not equal to Time extension Requested</description>
        <errorConditionFormula>OR( $UserRole.Name = &apos;HMA Analyst&apos;, $UserRole.Name = &apos;HMA Manager&apos;) &amp;&amp;   
	NOT(ISPICKVAL( PRIORVALUE(Status__c) , &apos;Time Extension Requested&apos;) ) &amp;&amp;  
 OR( ISPICKVAL(Status__c, &apos;Time Extension Accepted&apos;) ,  ISPICKVAL(Status__c, &apos;Time Extension Rejected&apos;) )</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Prior status should be Time Extension Requested</errorMessage>
    </validationRules>
</CustomObject>